feat: stylized about section

--- a/index.html
+++ b/index.html
@@ -54,35 +54,64 @@
         <section id="portfolio" class="container py-5">
             <h2 class="text-center py-2 text-uppercase fs-2">portfolio</h2>
             <hr>
-            <div class="row py-2 gx-5">
+            <div class="row py-2">
                 <div class="col">
                     <div class="p-3 mb-2 bg-primary text-white">
                         immagine1
                     </div>
-
                 </div>
                 <div class="col">
                     <div class="p-3 mb-2 bg-secondary text-white">
                         immagine2
                     </div>
-
                 </div>
                 <div class="col">
                     <div class="p-3 mb-2 bg-success text-white">
                         immagine3
                     </div>
-
                 </div>
             </div>
             <div class="row">
-                <div class="col p-3 mb-2 bg-danger text-white">
-                    immagine4
+                <div class="col">
+                    <div class="p-3 mb-2 bg-danger text-white">
+                        immagine4
+                    </div>
                 </div>
-                <div class="col p-3 mb-2 bg-warning text-dark">
-                    immagine5
+                <div class="col">
+                    <div class="p-3 mb-2 bg-warning text-dark">
+                        immagine5
+                    </div>
                 </div>
-                <div class="col p-3 mb-2 bg-info text-white h-auto">
-                    immagine6
+                <div class="col">
+                    <div class="p-3 mb-2 bg-info text-white h-auto">
+                        immagine6
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="container">
+                <div id="about-container" class="text-white w-75 py-5 m-auto">
+                    <div class="row">
+                    <h2 class="text-center py-2 text-uppercase fs-2">about</h2>
+                    <hr>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam fugiat est expedita minus aliquid, ut blanditiis unde eum ducimus. Quo error maxime animi est, nihil saepe quis? Magnam, blanditiis.
+                            </p>
+                        </div>
+                        <div class="col">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam fugiat est expedita minus aliquid, ut blanditiis unde eum ducimus. Quo error maxime animi est, nihil saepe quis? Magnam, blanditiis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row py-3">
+                        <button type="button" class="btn btn-outline-light w-25 mx-auto">Download</button>
+                    </div>
                 </div>
             </div>
         </section>
