feat: minor fixes + tried not to stretch circles in footer but failed

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <footer>
         <div id="footer-top">
             <div id="footer-top-contained" class="container">
-                <div class="row gx-5 py-5 text-center text-white">
+                <div class="row py-5 text-center text-white">
                     <div class="col-4">
                         <h3 class="text-uppercase">location</h3>
                         <span>2215 John Daniel Drive Clark, MO 54243</span>
