feat: portfolio and footer cols responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col text-center">
                         <img src="img/avatar.svg" class="img-fluid object-fit-cover w-25 mb-2" alt="profilo">
-                        <h1 class="fs-1 fw-bold py-2">start bootstrap</h1>
+                        <h1 class="fw-bold py-2">start bootstrap</h1>
                         <hr class="w-50 mx-auto">
                         <div>
                             <span>graphic artist</span>
@@ -57,25 +57,25 @@
         </section>
 
         <section id="portfolio" class="container py-5">
-            <h2 class="text-center py-2 text-uppercase fs-2 fw-bold">portfolio</h2>
+            <h2 class="text-center py-2 text-uppercase fw-bold">portfolio</h2>
             <hr class="w-50 mx-auto">
-            <div class="row row-cols-3 pt-2 mb-2 g-3">
-                <div class="col bg-primary text-center">
+            <div class="row pt-2 mb-2 g-3">
+                <div class="col col-lg-4 col-md-6 bg-primary text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
-                <div class="col text-center">
+                <div class="col-12 col-lg-4 col-md-6 text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
-                <div class="col bg-success text-center">
+                <div class="col-12 col-lg-4 col-md-6 bg-success text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
-                <div class="col bg-danger text-center">
+                <div class="col-12 col-lg-4 col-md-6 bg-danger text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
-                <div class="col bg-warning text-center">
+                <div class="col-12 col-lg-4 col-md-6 bg-warning text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
-                <div class="col bg-info text-center">
+                <div class="col-12 col-lg-4 col-md-6 bg-info text-center">
                     <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
                 </div>
             </div>
@@ -139,12 +139,12 @@
     <footer>
         <div id="footer-top">
             <div id="footer-top-contained" class="container">
-                <div class="row py-5 text-center text-white">
-                    <div class="col-4">
+                <div class="row py-5 text-center text-white g-4">
+                    <div class="col-12 col-md-4">
                         <h3 class="text-uppercase">location</h3>
                         <span>2215 John Daniel Drive Clark, MO 54243</span>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <h3 class="text-uppercase">around the web</h3>
                         <div class="d-flex flex-row justify-content-center gap-3">
                             <div class="circle">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <h3 class="text-uppercase">about freelancer</h3>
                         <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#"
                                 class="_link">Start Bootstrap</a>.</p>
