feat: navbar responsive

--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
 
 <body>
 
-    <header class="text-white text-uppercase py-3">
+    <header class="text-uppercase py-3">
         <nav class="container">
             <div class="row justify-content-between">
-                <div class="col col-3">
-                    start bootstrap
+                <div class="col">
+                    <a class="navbar-brand text-white fw-bold" href="#jumbo">start bootstrap</a>
                 </div>
-                <div class="col col-3">
-                    portfolio
+                <div class="col d-flex gap-3 justify-content-end">
+                    <a class="navbar-brand text-white d-none d-md-inline-block" ref="#portfolio">portfolio</a>
+                    <a class="navbar-brand text-white d-none d-md-inline-block" ref="#about">about</a>
+                    <a class="navbar-brand text-white d-none d-md-inline-block" ref="#contact">contact</a>
+                    <a href="#" class="navbar-brand text-white d-inline-block d-md-none"><i class="fa-solid fa-bars border rounded-1 px-2 py-1"></i></a>
                 </div>
 
             </div>
         </nav>
+        
+        
 
 
     </header>
