--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                     <hr class="w-50 mx-auto">
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12 col-md-6">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam fugiat est expedita
                             minus aliquid, ut blanditiis unde eum ducimus. Quo error maxime animi est, nihil saepe quis?
                             Magnam, blanditiis.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-6">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam fugiat est expedita
                             minus aliquid, ut blanditiis unde eum ducimus. Quo error maxime animi est, nihil saepe quis?
@@ -110,8 +110,8 @@
                     </div>
                 </div>
                 <div class="row py-3">
-                    <button type="button" class="btn btn_prova btn-outline-light mx-auto fs-6"><i
-                            class="fa-solid fa-download"></i> Download</button>
+                    <button type="button" class="btn btn_prova btn-outline-light mx-auto py-2 w-25">
+                        <i class="fa-solid fa-download"></i> Download</button>
                 </div>
             </div>
         </section>
@@ -144,7 +144,7 @@
     <footer>
         <div id="footer-top">
             <div id="footer-top-contained" class="container">
-                <div class="row py-5 text-center text-white g-4">
+                <div class="row py-5 px-3 text-center text-white g-4">
                     <div class="col-12 col-md-4">
                         <h3 class="text-uppercase">location</h3>
                         <span>2215 John Daniel Drive Clark, MO 54243</span>
