feat: divider with star done + complete responsive

--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
                     <div class="col text-center">
                         <img src="img/avatar.svg" class="img-fluid object-fit-cover w-25 mb-2" alt="profilo">
                         <h1 class="fw-bold py-2">start bootstrap</h1>
-                        <hr class="w-50 mx-auto">
+                        <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
+                            <div class="small-line bg-white"></div>
+                            <i class="fa-solid fa-star fs-4"></i>
+                            <div class="small-line bg-white"></div>
+                        </div>
                         <div>
-                            <span>graphic artist</span>
-                            <span>web designer</span>
+                            <span>graphic artist - </span>
+                            <span>web designer - </span>
                             <span>illustrator</span>
                         </div>
                     </div>
@@ -63,25 +67,29 @@
 
         <section id="portfolio" class="container py-5">
             <h2 class="text-center py-2 text-uppercase fw-bold">portfolio</h2>
-            <hr class="w-50 mx-auto">
-            <div class="row pt-2 mb-2 g-3">
-                <div class="col col-lg-4 col-md-6 bg-primary text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+            <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
+                <div class="small-line bg-black"></div>
+                <i class="fa-solid fa-star fs-4"></i>
+                <div class="small-line bg-black"></div>
+            </div>
+            <div class="row pt-2 mb-2 g-4">
+                <div class="col col-lg-4 col-md-6 text-center">
+                    <img src="img/cabin.png" class="img-fluid object-fit-cover rounded-3" alt="cabin">
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+                <div class="col-12 col-lg-4 col-md-6 text-center rounded-2">
+                    <img src="img/cake.png" class="img-fluid object-fit-cover rounded-3" alt="cake">
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 bg-success text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+                <div class="col-12 col-lg-4 col-md-6 text-center rounded-2">
+                    <img src="img/circus.png" class="img-fluid object-fit-cover rounded-3" alt="circus tent">
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 bg-danger text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+                <div class="col-12 col-lg-4 col-md-6 text-center rounded-2">
+                    <img src="img/game.png" class="img-fluid object-fit-cover rounded-3" alt="joypad">
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 bg-warning text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+                <div class="col-12 col-lg-4 col-md-6 text-center rounded-2">
+                    <img src="img/safe.png" class="img-fluid object-fit-cover rounded-3" alt="safe">
                 </div>
-                <div class="col-12 col-lg-4 col-md-6 bg-info text-center">
-                    <img src="https://picsum.photos/300" class="img-fluid object-fit-cover" alt="immagine di prova">
+                <div class="col-12 col-lg-4 col-md-6 text-center rounded-2">
+                    <img src="img/submarine.png" class="img-fluid object-fit-cover rounded-3" alt="submarine">
                 </div>
             </div>
 
@@ -91,7 +99,11 @@
             <div class="container text-white w-75 py-5">
                 <div class="row">
                     <h2 class="text-center py-2 text-uppercase fs-2 fw-bold">about</h2>
-                    <hr class="w-50 mx-auto">
+                    <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
+                        <div class="small-line bg-white"></div>
+                        <i class="fa-solid fa-star fs-4"></i>
+                        <div class="small-line bg-white"></div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6">
@@ -118,7 +130,11 @@
 
         <section id="contact" class="container w-75 py-5">
             <h2 class="text-center py-2 text-uppercase fs-2 fw-bold">contact me</h2>
-            <hr class="w-50 mx-auto">
+            <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
+                <div class="small-line bg-black"></div>
+                <i class="fa-solid fa-star fs-4"></i>
+                <div class="small-line bg-black"></div>
+            </div>
             <div class="mb-3">
                 <input type="text" class="form-control form_prova" id="formGroupExampleInput" placeholder="Name">
             </div>
