fix: fixed profile image responsive dimensions + divider border-radius

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <section id="jumbo" class="text-uppercase text-white">
             <div id="jumbo-contained" class="container py-5">
                 <div class="row">
-                    <div class="col text-center">
-                        <img src="img/avatar.svg" class="img-fluid object-fit-cover w-25 mb-2" alt="profilo">
+                    <div class="col-12 text-center">
+                        <img src="img/avatar.svg" class="my_img image-fluid object-fit-cover mb-2" alt="profilo">
                         <h1 class="fw-bold py-2">start bootstrap</h1>
                         <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
-                            <div class="small-line bg-white"></div>
+                            <div class="small-line bg-white border-1 rounded-5"></div>
                             <i class="fa-solid fa-star fs-4"></i>
-                            <div class="small-line bg-white"></div>
+                            <div class="small-line bg-white border-1 rounded-5"></div>
                         </div>
                         <div>
                             <span>graphic artist - </span>
@@ -68,9 +68,9 @@
         <section id="portfolio" class="container py-5">
             <h2 class="text-center py-2 text-uppercase fw-bold">portfolio</h2>
             <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
-                <div class="small-line bg-black"></div>
+                <div class="small-line bg-black border-1 rounded-5"></div>
                 <i class="fa-solid fa-star fs-4"></i>
-                <div class="small-line bg-black"></div>
+                <div class="small-line bg-black border-1 rounded-5"></div>
             </div>
             <div class="row pt-2 mb-2 g-4">
                 <div class="col col-lg-4 col-md-6 text-center">
@@ -100,9 +100,9 @@
                 <div class="row">
                     <h2 class="text-center py-2 text-uppercase fs-2 fw-bold">about</h2>
                     <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
-                        <div class="small-line bg-white"></div>
+                        <div class="small-line bg-white border-1 rounded-5"></div>
                         <i class="fa-solid fa-star fs-4"></i>
-                        <div class="small-line bg-white"></div>
+                        <div class="small-line bg-white border-1 rounded-5"></div>
                     </div>
                 </div>
                 <div class="row">
@@ -131,9 +131,9 @@
         <section id="contact" class="container w-75 py-5">
             <h2 class="text-center py-2 text-uppercase fs-2 fw-bold">contact me</h2>
             <div class="divider mb-2 d-flex gap-3 justify-content-center align-items-center">
-                <div class="small-line bg-black"></div>
+                <div class="small-line bg-black border-1 rounded-5"></div>
                 <i class="fa-solid fa-star fs-4"></i>
-                <div class="small-line bg-black"></div>
+                <div class="small-line bg-black border-1 rounded-5"></div>
             </div>
             <div class="mb-3">
                 <input type="text" class="form-control form_prova" id="formGroupExampleInput" placeholder="Name">
