fix: responsive container for navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header class="text-uppercase py-3">
-        <nav class="container">
+        <nav class="container-md">
             <div class="row justify-content-between">
                 <div class="col">
                     <a class="navbar-brand text-white fw-bold" href="#jumbo">start bootstrap</a>
